<resources>
    <string name="app_name" translatable="false">Jrivia</string>
    <string name="welcome">Welcome to Jrivia</string>
    <string name="single_player">Single-player</string>
    <string name="multiplayer">Multiplayer (coming soon)</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="start">Start Game</string>
    <string name="game_explanation">%1$d Jrivia questions will be loaded. When you press the button \"Start Game\", a timer will start running.\nThe time is not used for the score itself, but to determine the best when two scores are equal.</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="question_number">Question %1$d</string>
    <string name="answer_label">Answer:</string>
    <string name="answer">Answer</string>
    <string name="correct">Correct</string>
    <string name="your_answer">Your answer:</string>
    <string name="error_clues_fetching">Something went wrong while trying to load the game. Try again later</string>
    <string name="go_back">Go back</string>
    <string name="game_start_error">Something went wrong while trying to start the game</string>
    <string name="finish">Finish</string>
    <string name="results">Results</string>
    <string name="score">Score</string>
    <string name="time">Time</string>
    <string name="view_questions">View questions</string>
    <string name="play_again">Play again</string>
    <string name="total_questions">Total Questions</string>
    <string name="correct_questions">Correct Questions</string>
    <string name="menu">Menu</string>
    <string name="press_again_to_exit">Press back again to exit</string>
    <string name="warning_message_end_game">This will end this current game and you will lose its progress.</string>
    <string name="warning_title_end_game">End game?</string>
    <string name="end">End</string>
    <string name="cancel">Cancel</string>
    <string name="number_of_questions">Number of questions</string>
    <string name="value">Value:</string>
    <string name="number_of_questions_with_number">%1$d Questions</string>
    <string name="show_all">Show all</string>
    <string name="show_per_number">Show per number</string>
    <string name="all">All</string>
    <string name="per_number">Per number</string>
    <string name="username">Username</string>
    <string name="total">Total</string>
    <string name="daily_quest">Jrivia\'s Daily Quest</string>
    <string name="solve_daily_quest">Solve daily quest</string>
    <string name="view_quests_of_last_month">View quests of last month</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="score_deletion_warning">This score will be deleted permanently and cannot be restored.</string>
    <string name="delete_selected_score">Delete selected score?</string>
    <string name="info">Info</string>
    <string name="score_explanation_all">The scores are ranked by the score value, time, total number of questions and number of the correct solved questions</string>
    <string name="score_explanation_per_number">The scores are ranked by the score value, time and number of the correct solved questions</string>
    <string name="ok">OK</string>
    <string name="daily_quests">Daily quests</string>
    <string name="minus_button">Minus button</string>
    <string name="plus_button">Plus button</string>
    <string name="daily_quest_solved">Daily quest solved</string>
    <string name="clue_to_string">%1$s has scored %2$d and answered %3$d out of %4$d correctly in %5$s at the Jrivia game</string>
    <string name="solve">solve</string>
    <string name="already_solved">Already solved</string>
    <string name="solved">solved</string>
    <string name="unsolved">unsolved</string>
    <string name="have_not_solved_yet">You haven\'t solved today\'s quest yet</string>
    <string name="have_solved">You have solved today\'s quest!</string>
    <string name="points">points</string>
    <string name="solve_and_add_points_button">+ %1$d points</string>
    <string name="points_earned">%1$d points earned</string>
    <string name="solved_quests">solved quests</string>
    <string name="not_available_yet">Today\'s quest is not available yet.\nA notification will be sent when there\'s one available.</string>
    <string name="new_quest_available">New daily quest available</string>
    <string name="questions_overview">Questions overview</string>
    <string name="today_not_available_yet">Today\'s quest is not available yet</string>
    <string name="missed_chance">You missed your chance</string>
    <string name="score_selected">Score selected</string>
    <string name="explanation">Explanation</string>
    <string name="game_overview_error">Something went wrong while trying to finish the game</string>

    <!-- plurals -->
    <plurals name="in_guesses">
        <item quantity="one">in 1 guess</item>
        <item quantity="other">in %1$d guesses</item>
    </plurals>
    <string name="zero_guesses_already">No guesses yet</string>
    <plurals name="guesses">
        <item quantity="one">1 guess</item>
        <item quantity="other">%1$d guesses</item>
    </plurals>

    <plurals name="guesses_already">
        <item quantity="one">1 guess already</item>
        <item quantity="other">%1$d guesses already</item>
    </plurals>


    <string-array name="daily_quest_tab_names">
        <item>Today</item>
        <item>History</item>
    </string-array>
</resources>