<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".fragments.ResultsButtonsFragment">

    <Button
        android:id="@+id/viewQuestionsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_questions" />

    <View
        android:id="@+id/overviewButtonDivivder"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider" />

    <Button
        android:id="@+id/overviewScoreboardButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scoreboard" />

    <Button
        android:id="@+id/playAgainButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play_again" />

    <Button
        android:id="@+id/menuButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu" />


</androidx.appcompat.widget.LinearLayoutCompat>