<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/welcomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/welcome"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        android:id="@+id/dailyQuestLayout"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_margin="20dp"-->
<!--        app:layout_constraintTop_toBottomOf="@id/welcomeTextView">-->

<!--        <TextView-->
<!--            android:id="@+id/dailyQuestLabelTextView"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/daily_quest"-->
<!--            android:textSize="24sp"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent" />-->

<!--        <TextView-->
<!--            android:id="@+id/dailyQuestTextView"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:lines="6"-->
<!--            android:textSize="18sp"-->
<!--            app:layout_constraintTop_toBottomOf="@id/dailyQuestLabelTextView"-->
<!--            tools:text="Scientifically Zea mays, this cereal grain originated in the Americas but is today cultivated worldwide" />-->
<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/welcomeTextView"
        >

<!--        <Button-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/solve_daily_quest" />-->

<!--        <Button-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/view_quests_of_last_month" />-->

        <Button
            android:id="@+id/singlePlayerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/single_player" />

        <Button
            android:id="@+id/multiplayerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:enabled="false"
            android:text="@string/multiplayer" />

        <Button
            android:id="@+id/dailyQuestButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/daily_quest" />

        <Button
            android:id="@+id/homeScoreboardButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scoreboard" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

