<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DailyQuestsTodayFragment">

    <TextView
        android:id="@+id/questOfTodayUnavailableTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/not_available_yet"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/todayQuestLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/isSolvedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/have_not_solved_yet"
            tools:textColor="@color/secondaryColor" />

        <TextView
            android:id="@+id/todayGuessesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/isSolvedTextView"
            tools:text="3 guesses already" />

        <TextView
            android:id="@+id/todayQuestionTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/todayGuessesTextView"
            tools:text="What is the name of the very first president of the U.S.A" />

        <EditText
            android:id="@+id/todayAnswerEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/answer"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:lines="1"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@id/todayQuestionTextView" />

        <Button
            android:id="@+id/solveAndAddPointsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_background_color"
            android:text="@string/solve_and_add_points_button"
            app:layout_constraintTop_toBottomOf="@id/todayAnswerEditText"
            tools:ignore="UnusedAttribute" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>